--- a/references/Habitat.bib
+++ b/references/Habitat.bib
@@ -60,20 +60,19 @@ volume = {17},
 keywords = {}
 }
 
-@article{brookes2009,
+@report{brookes2009,
 	title = {An ecosystem assessment framework to guide management of the Coorong. Final report of the CLLAMMecology Research Cluster},
-	author = {Brookes,J},
+	author = {Brookes, J.D. and Lamontagne, S. and Aldridge, K.T. and Benger, S. and Bissett, A. and Bucater, L. and Cheshire, A.C. and Cook, P.L.M. and Deegan, B.M. and Dittmann, S. and Fairweather, P.G. and Fernandes, M.B. and Ford, P.W. and Geddes, M.C. and Gillanders, G.M. and Grigg, N.J. and Haese, R.R. and Krull, E. and Langley, R.A. and Lester, R.E. and Loo, M. and Munro, A.R. and Noell, C.J. and Nayar, S. and Paton, D.C. and Revill, A.T. and Rogers, D.J. and Rolston, A. and Sharma, S.K. and Short, D.A. and Tanner, J.E. and Webster, I.T. and Wellman, N.R. and Ye, Q. },
 	year = {2009},
 	date = {2009},
-	journal = {Canberra, CSIRO: Water for a Healthy Country National Research Flagship},
+	publisher = {CSIRO: Water for a Healthy Country National Research Flagship},
 	doi = {10.4225/08/585AC4318B01F},
 	url = {https://publications.csiro.au/publications/publication/PIprocite:460cc125-b6bc-4d85-9221-dfc1ba5a5c29}
 }
 @report{asano2020,
-	title = {The growth of aquatic macrophytes (Ruppia tuberosa spp. and Althenia cylindrocarpa) and the filamentous algal community in the southern Coorong},
+	title = {The growth of aquatic macrophytes (Ruppia tuberosa spp. and Althenia cylindrocarpa) and the filamentous algal community in the southern Coorong. Goyder Institute for Water Research Technical Report Series No.20/13},
 	author = {Asanopoulos,C. and Waycott, M.},
 	year = {2020},
-	journal = {Goyder Institute for Water Research Technical Report Series No.20/13},
 	url = {http://www.goyderinstitute.org/_r3429/media/system/attrib/file/700/TI-2.1.1_TRS_20-13_Aquatic%20Plant%20Synthesis_2020-12-11_Final%20v2.pdf}
 }
 @Book{phillips2006,
@@ -81,11 +80,9 @@ author = { Phillips, B, and Muller, K.},
 title = { Ecological character of the Coorong, Lakes Alexandrina and Albert Wetland of International Importance},
 isbn = { 1921238305 },
 publisher = { Dept. for Environment and Heritage [Adelaide, S. Aust.] },
-pages = { iv, 323 p. : },
+pages = { iv, 323 p.},
 year = { 2006 },
 language = { English },
-subjects = { Zoology -- South Australia -- Coorong, The.; Water quality -- South Australia -- Coorong, The.; Wetland ecology -- South Australia -- Coorong, The.; Ecological surveys -- South Australia -- Coorong, The. },
-life-dates = { 2006 -  },
 catalogue-url = { https://nla.gov.au/nla.cat-vn3884698 },
 }
 @report{collier2017,
@@ -95,20 +92,17 @@ catalogue-url = { https://nla.gov.au/nla.cat-vn3884698 },
 	journal = {},
 	url = {}
 }
-@report{ye2011,
-	title = {Coorong fish intervention monitoring during barrage releases in 2010/11},
+@article{ye2011,
+	title = {Coorong fish intervention monitoring during barrage releases in 2010/11. South Australian Research and Development Institute (Aquatic Sciences), Adelaide. SARDI publication No. F2011/000309-1. SARDI Research Report Series},
 	author = {Ye, Q. and Bucater, L. and Short, D. },
 	year = {2011},
-	journal = {South Australian Research and Development Institute (Aquatic Sciences), Adelaide. SARDI publication No. F2011/000309-1. SARDI Research Report Series},
-	volume = {559},
-	pages = {57},
+	journal = {},
 	url = {https://cdn.environment.sa.gov.au/environment/docs/coorong-fish-monitoring-barrage-release-2010-11-rep.pdf}
 }
 @report{ye2014,
-	title = {Monitoring the ecological responses to Commonwealth environmental water delivered to the Lower Murray River in 2012-13. Report 2, prepared for Commonwealth Environmental Water Office},
-author = {Ye, Q, and J. Livore, and K. Aldridge, and T. Bradford, and B. Busch, and J. Earl,and M. Hipsey, and E. Hoffman,and K. Joehnk,and Z. Lorenz, and J. Nicol,and R. Oliver,and L. Suitor,and L. Tan,and R. Turner, and I. Wegner},
+	title = {Monitoring the ecological responses to Commonwealth environmental water delivered to the Lower Murray River in 2012-13. Report 2, prepared for Commonwealth Environmental Water Office. South Australian Research and Development Institute, Aquatic Sciences},
+author = {Ye, Q. and Livore, J. and Aldridge, K. and Bradford, T. and Busch, B. and Earl, J. and Hipsey, M. and Hoffman, E. and Joehnk,K. and Lorenz, Z. and Nicol, J. and Oliver,R. and Suitor, L. and Tan, L. and Turner, R. and Wegner, I.},
 	year = {2014},
-	journal = {South Australian Research and Development Institute, Aquatic Sciences},
 	url = {https://www.awe.gov.au/sites/default/files/documents/ecological-response-monitoring-lower-murray-2012-13-report-2.pdf}
 }
 
@@ -135,7 +129,7 @@ author = {Lewis, R and Waycott, M and O’Loughlin E J, and Urgl, C, and van Dij
 }
 @report{paton2018,
 	title = {Monitoring of Ruppia tuberosa in the southern Coorong, summer 2017-18 },
-author = {Paton, DC, and Paton, FL and Bailey, CP },
+author = {Paton, D.C., and Paton, F.L. and Bailey, C.P. },
 	year = {2018},
 	journal = {},
 	volume = {},
