--- a/references/Introduction.bib
+++ b/references/Introduction.bib
@@ -10,7 +10,6 @@ volume = {1},
 series = {Ecohydrology from Catchment to Coast},
 issn = {25892371},
 doi = {https://doi.org/10.1016/B978-0-12-818152-2.00005-X},
-url = {https://www.sciencedirect.com/science/article/pii/B978012818152200005X},
 author = {Brookes, Justin and Aldridge, Kane and Hipsey, Matthew and Busch, Brendan and Ye, Qifeng and Gibbs, Matt and Paton, David}, 
 keywords = {Coorong, River Murray, Salinity, , Salt export},
 abstract = {The Lower Lakes and Coorong system lies at the terminus of the River Murray and are an icon of the Australian landscape. This system is an incredibly important habitat for waterbirds, supporting more than 1% of the global populations of nine waterbird taxa and hosting up to 90% of waterbirds in the Murray–Darling Basin during drought. Modifications to flow have dramatically altered the salinity and water regime in the Coorong, which has impacted the abundance, distribution, and range of the biota in the Coorong. Prudent management and River Murray flows are critical to maintain the ecology of this site into the future. This chapter details the change in hydrology and salinity that has occurred in the Coorong and explores options for contemporary management.}
@@ -157,11 +156,10 @@ keywords = {}
 	doi = {10.4225/08/585AC4318B01F},
 	url = {https://publications.csiro.au/publications/publication/PIprocite:460cc125-b6bc-4d85-9221-dfc1ba5a5c29}
 }
-@article{ye2016,
-	title = {Monitoring Ecological Response to Commonwealth Environmental Water Delivered to the Lower Murray River in 2013-14. },
-	author = {Ye, Q. and Livore, J. and Aldridge, K. and Giatas, G.and Hipsey, M. and Joehnk, K. and Nicol, J. and Wilson, P. and  Zampatti,  B.},
+@report{ye2016,
+	title = {Monitoring Ecological Response to Commonwealth Environmental Water Delivered to the Lower Murray River in 2013-14. SARDI Adelaide: South Australian Research and Development Institute. Final Report prepared for the Commonwealth Environmental Water Office },
+	author = {Ye, Q. and Livore, J. and Aldridge, K. and Giatas, G. and Hipsey, M. and Joehnk, K. and Nicol, J. and Wilson, P. and  Zampatti,  B.},
 	year = {2016},
-	journal = {SARDI Adelaide: South Australian Research and Development Institute. Final Report prepared for the Commonwealth Environmental Water Office},
 	url = {https://www.researchgate.net/publication/312279815_Monitoring_the_ecological_responses_to_Commonwealth_environmental_water_delivered_to_the_Lower_Murray_River_in_2013-14_Report_2_prepared_for_Commonwealth_Environmental_Water_Office}
 }
 
