--- a/references/Oxygen.bib
+++ b/references/Oxygen.bib
@@ -117,7 +117,7 @@ keywords = {}
 }
 @report{mosley2020,
   title = {Coorong water quality synthesis with a focus on the drivers of eutrophication},
-  author = {Mosley, LM, and Priestley, S, and Brookes, J, and Dittmann, S, and Farkaš, J, and Farrell, M, and Ferguson, AJ, and Gibbs, M, and Hipsey, M, and Huang, J, and Lam-Gordillo, O, and Simpson, SL, and Teasdale, PR, and Tyler, JJ, and Waycott, M, and Welsh, DT},
+  author = {Mosley, L.M., and Priestley, S., and Brookes, J., and Dittmann, S., and Farkaš, J., and Farrell, M., and Ferguson, A.J., and Gibbs, M., and Hipsey, M., and Huang, J., and Lam-Gordillo, O., and Simpson, S.L., and Teasdale, P.R., and Tyler, J.J., and Waycott, M., and Welsh, D.T.},
   year = {2020},
   journal = {Goyder Institute for Water Research Technical Report Series No. 20/10},
   url = {http://www.goyderinstitute.org/_r3428/media/system/attrib/file/699/TI_1.1.2_TRS_20-10_Nutrient%20Synthesis_2020-08-26_Final%20v2.pdf}
@@ -342,4 +342,11 @@ journal = {Journal of environmental sciences (China)}
 	pages = {vii--x},
 	doi = {10.1016/s0422-9894(08)70004-7},
 	url = {http://dx.doi.org/10.1016/S0422-9894(08)70004-7}
+}
+@report{dittman2021,
+	title = {Benthic macroinvertebrate survey 2020-2021 report. Coorong, Lower Lakes and Murray Mouth Icon Site. },
+	author = {Dittman, S. and Kent, J. and Lam-Gordillo, O},
+	year = {2021},
+	journal = {Report for the Department for Environment and Water and the Murray-Darling Basin Authority. Flinders University,
+Adelaide.}
 }
