--- a/references/Resuspension.bib
+++ b/references/Resuspension.bib
@@ -23,6 +23,20 @@ pages = {119--142},
 volume = {285}, 
 keywords = {}
 }
+@article{green2014, 
+year = {2014}, 
+title = {{Review of wave-driven sediment resuspension and transport in estuaries: wave-driven sediment transport}}, 
+author = {Green, Malcolm O and Coco, Giovanni}, 
+journal = {Reviews of Geophysics}, 
+issn = {8755-1209}, 
+doi = {10.1002/2013rg000437}, 
+abstract = {{Waves are fundamentally important to the physical and biological functioning of estuaries. Understanding and predicting contaminant transport, development of sedimentary structures, geomorphological response to changes in external forcings such as rising sea level, and response of estuarine ecosystems to contaminant stressors require understanding of the relative roles of wave- and current-driven sediment transport. We review wave-driven sediment resuspension and transport in estuaries, including generation of bed shear stress by waves, initiation of sediment motion by waves, and the ways waves modulate, add to, and interact with sediment transport driven by currents. A key characteristic of the wave-induced force on the seabed is extreme spatial and temporal variations; simple analytical models are revealing of the way such patterns develop. Statistical methods have been widely applied to predict wave resuspension of intertidal-flat bed sediments, and physically based predictors of resuspension developed from open-coast studies appear to also apply to short-period estuarine waves. There is ample experimental evidence to conclude that over the long term, waves erode and tidal currents accrete intertidal flats. Waves indirectly add to the formation of fluid mud by adding to the estuarine pool of fine sediment, and waves may fluidize subtidal seabeds, changing bed erodibility. Models have been used to explore the dynamic balance between sediment transport by waves and by currents and have revealed the key control of waves on estuarine morphology. Estuarine intertidal flats are excellent natural laboratories that offer opportunities for working on a number of fundamental problems in sediment transport.}}, 
+pages = {77--117}, 
+number = {1}, 
+volume = {52}, 
+keywords = {}
+}
+
 @article{black1997, 
 year = {1997}, 
 title = {{Release of nitrogen compounds following resuspension of sediment: Model predictions}}, 
