--- a/index.Rmd
+++ b/index.Rmd
@@ -113,7 +113,13 @@ If you're unfamiliar with writing `.Rmd` and `.md` files, the [RStudio IDE 1.4](
 
 ## Acknowledgements {-}
 
+This project is part of the South Australian Government’s Healthy Coorong, *Healthy Basin Program*, which is jointly funded by the Australian and South Australian governments. Model development has been undertaken by the University of Western Australia *AED research group*. The developers of the model and authors of this e-book gratefully acknowledge the contribution by Matthew Gibbs, Michelle Waycott and the Trials and Investigations Integration Team within the Department for Environment and Water for assisting with the setup and support of the CDM project and this CDM online resource. We are also grateful to BMT Commercial Australia for use of the model TUFLOW-FV and Dr. Ian Teakle from BMT for support and collaboration using the TUFLOW-FV hydrodynamic model. Casper Boon provided model development support for the AED platform, and Giles Knight made this online book possible by creation of the R bookdown repository.
+
+<!--
+
 The model development has been funded by the South Australian Government *Department of Environment and Water* and undertaken by the University of Western Australia *AED research group*. The developers of the model and authors of this e-book gratefully acknowledge the contribution by Matthew Gibbs, Michelle Waycott and the Integration Team within DEW for assisting with the setup and support of the CDM project and this CDM online resource. We are also grateful to BMT Commercial Australia for use of the model TUFLOW-FV and Dr. Ian Teakle from BMT for support and collaboration using the TUFLOW-FV hydrodynamic model. Casper Boon provided model development support for the AED platform, and Giles Knight made this online book possible by creation of the R bookdown repository.
+
+-->
 
 ## Citing this document  {-}
 
